--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body
 {
     color: blueviolet;
     text-align: center;
-    font-family: "Arial";
+    font-family: "courier";
     margin: 0;
     padding: 0;
 }
